--- a/HTML-CSS/FinalAssignment/styles/style.css
+++ b/HTML-CSS/FinalAssignment/styles/style.css
@@ -1483,6 +1483,7 @@ h1 {
     margin-top: 100px;
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch;
   }
 }
 .feedback__card {
@@ -1492,6 +1493,32 @@ h1 {
   background: rgba(196, 196, 196, 0.5);
   max-width: 259px;
   flex: 1;
+}
+.feedback__card::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 124px;
+  height: 202px;
+  transform: translate(-50%, -55%);
+  background-image: url(../assets/images/card-bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  .feedback__card::before {
+    width: 173px;
+    height: 283px;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .feedback__card::before {
+    width: 294px;
+    height: 479px;
+  }
 }
 @media screen and (min-width: 768px) {
   .feedback__card {
@@ -1567,27 +1594,6 @@ h1 {
 }
 .feedback__card.is-active .feedback__card--name {
   color: #fff;
-}
-.feedback__card-bg {
-  z-index: -1;
-  position: absolute;
-  max-width: 124px;
-  top: -10%;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
-@media screen and (min-width: 768px) {
-  .feedback__card-bg {
-    max-width: 174px;
-  }
-}
-@media screen and (min-width: 1025px) {
-  .feedback__card-bg {
-    max-width: 294px;
-    left: 15%;
-    transform: none;
-    top: -60%;
-  }
 }
 
 .footer {
